--- a/sinaweiboswift/sinaweiboswift/Info.plist
+++ b/sinaweiboswift/sinaweiboswift/Info.plist
@@ -30,5 +30,12 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+    
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <!--Include to allow all connections (DANGER)-->
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
 </dict>
 </plist>
